--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <!-- Product 1 -->
             <div class="product">
                 <a href="product-details.html?name=Adi%20Crewneck%20Sweater">
-                    <img src="image1.jpg" alt="Adi Crewneck Sweater">
+                    <img src="images/image1.jpg" alt="Adi Crewneck Sweater">
                     <p class="price">₱1,799</p>
                     <p class="size">29 L / 24 W</p>
                 </a>
@@ -51,7 +51,7 @@
             <!-- Product 2 -->
             <div class="product">
                 <a href="product-details.html?name=Vans%20Sweater">
-                    <img src="image2.jpg" alt="Vans Sweater">
+                    <img src="images/image2.jpg" alt="Vans Sweater">
                     <p class="price">₱1,099</p>
                     <p class="size">25 L / 21 W</p>
                 </a>
@@ -60,7 +60,7 @@
             <!-- Product 3 -->
             <div class="product">
                 <a href="product-details.html?name=Adi%20Paris%20Track%20Jacket">
-                    <img src="image3.jpg" alt="Adi Paris Track Jacket">
+                    <img src="images/image3.jpg" alt="Adi Paris Track Jacket">
                     <p class="price">₱899</p>
                     <p class="size">22 L / 19 W</p>
                 </a>
@@ -69,7 +69,7 @@
             <!-- Product 4 -->
             <div class="product">
                 <a href="product-details.html?name=Ellesse%20Windbreaker">
-                    <img src="image4.jpg" alt="Ellesse Windbreaker">
+                    <img src="images/image4.jpg" alt="Ellesse Windbreaker">
                     <p class="price">₱1,199</p>
                     <p class="size">20 L / 26 W</p>
                 </a>
@@ -78,7 +78,7 @@
             <!-- Product 5 -->
             <div class="product">
                 <a href="product-details.html?name=Kappa%20Polo">
-                    <img src="image5.jpg" alt="Kappa Polo">
+                    <img src="images/image5.jpg" alt="Kappa Polo">
                     <p class="price">₱799</p>
                     <p class="size">28 L / 25 W</p>
                 </a>
@@ -87,7 +87,7 @@
             <!-- Product 6 -->
             <div class="product">
                 <a href="product-details.html?name=Adi%20Windbreaker">
-                    <img src="image6.jpg" alt="Adi Windbreaker">
+                    <img src="images/image6.jpg" alt="Adi Windbreaker">
                     <p class="price">₱1,099</p>
                     <p class="size">25 L / 21 W</p>
                 </a>
@@ -96,7 +96,7 @@
             <!-- Product 7 -->
             <div class="product">
                 <a href="product-details.html?name=Nike%20Button-down%20Windbreaker">
-                    <img src="image7.jpg" alt="Nike Button-down Windbreaker">
+                    <img src="images/image7.jpg" alt="Nike Button-down Windbreaker">
                     <p class="price">₱1,299</p>
                     <p class="size">28 L / 24 W</p>
                 </a>
@@ -105,7 +105,7 @@
             <!-- Product 8 -->
             <div class="product">
                 <a href="product-details.html?name=Nike%20Big%20Logo%20Windbreaker">
-                    <img src="image8.jpg" alt="Nike Big Logo Windbreaker">
+                    <img src="images/image8.jpg" alt="Nike Big Logo Windbreaker">
                     <p class="price">₱1,299</p>
                     <p class="size">26 L / 24 W</p>
                 </a>
