--- a/product-details.html
+++ b/product-details.html
@@ -148,7 +148,7 @@
 
     <section class="product-detail">
         <div class="product-info">
-            <img id="product-image" src="image1.jpg" alt="Product Image">
+            <img id="product-image" src="images/image1.jpg" alt="Product Image">
         </div>
 
         <div class="product-details">
@@ -172,19 +172,19 @@
 
     <script>
         const products = {
-            "Adi Crewneck Sweater": ["image1.jpg", "29 L / 24 W", 1799],
-            "Vans Sweater": ["image2.jpg", "25 L / 21 W", 1099],
-            "Adi Paris Track Jacket": ["image3.jpg", "22 L / 19 W", 899],
-            "Ellesse Windbreaker": ["image4.jpg", "20 L / 26 W", 1199],
-            "Kappa Polo": ["image5.jpg", "28 L / 25 W", 799],
-            "Adi Windbreaker": ["image6.jpg", "25 L / 21 W", 1099],
-            "Nike Button-down Windbreaker": ["image7.jpg", "28 L / 24 W", 1299],
-            "Nike Big Logo Windbreaker": ["image8.jpg", "26 L / 24 W", 1299]
+            "Adi Crewneck Sweater": ["images/image1.jpg", "29 L / 24 W", 1799],
+            "Vans Sweater": ["images/image2.jpg", "25 L / 21 W", 1099],
+            "Adi Paris Track Jacket": ["images/image3.jpg", "22 L / 19 W", 899],
+            "Ellesse Windbreaker": ["images/image4.jpg", "20 L / 26 W", 1199],
+            "Kappa Polo": ["images/image5.jpg", "28 L / 25 W", 799],
+            "Adi Windbreaker": ["images/image6.jpg", "25 L / 21 W", 1099],
+            "Nike Button-down Windbreaker": ["images/image7.jpg", "28 L / 24 W", 1299],
+            "Nike Big Logo Windbreaker": ["images/image8.jpg", "26 L / 24 W", 1299]
         };
 
         const urlParams = new URLSearchParams(window.location.search);
         const productName = urlParams.get('name');
-        const product = products[productName] || ["default.jpg", "N/A", 0];
+        const product = products[productName] || ["images/default.jpg", "N/A", 0];
 
         document.getElementById('product-name').textContent = productName;
         document.getElementById('product-size').textContent = `Size: ${product[1]}`;
